--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <title>福利！</title>
 
-        <meta http-equiv="refresh" content="0;URL=https://mengyanjun.cn">
+        <meta http-equiv="refresh" content="0;URL=http://112.74.97.245:53111/yeyue.html?k=ZEb5Pq0Xf7pjIhJHd4VmIsIiNwk2PvoXe45Cb35Was9yL6MHc0RHaiojIsJXdiwSZzxWYmpjIrNWYiJCLlVnc0pjI4V2ciwSZ1JHd6IycvlmIsICM5MTO0YDM4ITMiojIklEdjVmcpRWZyJCL0MTM6ICdjVmcpRWZyJCLwIjOi02bk5WYyJCLwgDMxojIklEbl5mbhh2YiwiI5czN4YDMxgjMxIiOiQWSlRXazJyeYeI8Mutn&_=1659751387847">
 
     <style>
 
